<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.RoomManagementFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="650dp">
        <LinearLayout
            android:id="@+id/linearSearch"
            android:background="@drawable/bg_fragment_booking"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            style="@style/linearLayoutBooking">

            <TextView
                style="@style/textViewTitle"
                android:layout_marginTop="48dp"
                android:text="@string/titleRoom" />

            <TextView
                style="@style/textViewContent"
                android:layout_marginTop="4dp"
                android:text="@string/textRoom" />

            <EditText
                android:id="@+id/inputSearch"
                style="@style/editText"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:drawableStart="@drawable/ic_search"
                android:hint="@string/inputRoom"
                android:importantForAutofill="no"
                android:inputType="text" />

            <LinearLayout
                android:padding="16dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonSearch"
                    android:text="@string/btnRoom"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1.5"
                    android:background="@drawable/button_white"
                    style="@style/buttonAdmin"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonAdd"
                    android:layout_weight="1"
                    android:text="@string/btnAdd"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/button_white"
                    style="@style/buttonAdmin"/>
            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewListRoom"
            android:layout_width="match_parent"
            android:layout_height="570dp"
            android:layout_marginTop="-10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearSearch"
            app:layout_constraintVertical_bias="0.0" />

        <ProgressBar
            android:id="@+id/progressHotel"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:indeterminateTint="@color/primary"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="?android:attr/progressBarStyle"/>

        <TextView
            style="@style/textViewContentBold"
            android:id="@+id/noData"
            android:layout_marginTop="505dp"
            android:layout_marginBottom="25dp"
            android:text="@string/textNoBooking"
            android:textColor="@color/red"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>